--- a/src/styles/components/_App.scss
+++ b/src/styles/components/_App.scss
@@ -4,11 +4,18 @@
     font-family: 'Lato', sans-serif;
     }
 .listContainer{
-        height: 75vh;
+        height: 30vh;
         display: flex;
         overflow-y: scroll;
         border: black;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        width: 100%;
+        position: relative;
+        margin:20px 0 0 0;
+        text-align: center;
     }
+
 
 header::after{
   display:block;
@@ -41,6 +48,16 @@ h1 {
     font-size: 50px;
     color: ghostwhite;
     text-shadow: -2px 2px 5px rgba(0,0,0,0.7); // this shadow is maintained across header items
+}
+h4 {
+    position: center;
+    display: inline-block;
+    text-align: center;
+    margin-bottom:-10px;
+    z-index: 1;
+    font-size: 20px;
+    color: rgba(0, 0, 0, 0.82);
+    text-shadow: -2px 2px 5px rgba(255, 255, 255, 0.70); // this shadow is maintained across header items
 }
 
 .head-link{
@@ -80,7 +97,7 @@ header::before{
     
      display: block;
      position:relative;
-     left:60px;
+     left:100px;
      padding:15px;
      margin:0px;
      background-color: whitesmoke;   
