--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -2,10 +2,19 @@
   font-family: 'Lato', sans-serif; }
 
 .listContainer {
-  height: 75vh;
+  height: 30vh;
   display: flex;
   overflow-y: scroll;
-  border: black; }
+  border: black;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  width: 100%;
+  position: relative;
+  margin: 20px 0 0 0;
+  text-align: center; }
+
+.listContainer li {
+  text-decoration: none; }
 
 header::after {
   display: block;
@@ -33,6 +42,16 @@ h1 {
   font-size: 50px;
   color: ghostwhite;
   text-shadow: -2px 2px 5px rgba(0, 0, 0, 0.7); }
+
+h4 {
+  position: center;
+  display: inline-block;
+  text-align: center;
+  margin-bottom: -10px;
+  z-index: 1;
+  font-size: 20px;
+  color: rgba(0, 0, 0, 0.82);
+  text-shadow: -2px 2px 5px rgba(255, 255, 255, 0.7); }
 
 .head-link {
   position: relative;
@@ -64,7 +83,7 @@ header::before {
 .content {
   display: block;
   position: relative;
-  left: 60px;
+  left: 100px;
   padding: 15px;
   margin: 0px;
   background-color: whitesmoke; }
